  ***************************
  * v2.1.2
  ***************************

    * Fixed unregistered bug
        Issue with @prefix@ in aliases.conf on MacOS
      Contributor(s):
        Paul Beach <pbeach at ibphoenix.com>

    * Bugfix CORE-2242
        The engine incorrectly fills BPB
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-2234
        Sometimes terminated worker processes in Classic are still considered being alive
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-2227
        Problem with column names with accents and triggers
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at uol.com.br>

    * Bugfix CORE-2223
        Multiple bugs in GBAK when working with ACLs
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-2222
        AV in the engine when storing text blob with transliteration blob filter
      Contributor(s):
        Vlad Horsun <hvlad at users.sourceforge.net>

    * Bugfix CORE-2221
        Attach to any DB fails after modification of access rights
        of security2.fdb from 0660 to 0666
      Contributor(s):
        Paul Beach <pbeach at ibphoenix.com>
        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-2209
        Very slow processing of the monitoring requests under high load
        and blocking other activity during that time
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-2184
        Superserver hangs when multiple clients create tables simultaneously
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-2182
        It's impossible to drop an existing UDF which name overlaps with a new built-in function name
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-2173
        Server crashes after abnormal disconnect with open ExecuteStatement
      Contributor(s):